--- a/editBookmarkDialog.html
+++ b/editBookmarkDialog.html
@@ -11,13 +11,15 @@
         <h2>Edit Bookmark</h2>
         <form id="edit-bookmark-form">
             <label for="edit-bookmark-name">Name:</label>
-            <input type="text" id="edit-bookmark-name" name="edit-bookmark-name" />
+            <input type="text" id="edit-bookmark-name" name="edit-bookmark-name" style="width: 90%;" />
 
             <label for="edit-bookmark-category">Category:</label>
-            <select id="edit-bookmark-category" name="edit-bookmark-category"></select>
+            <select id="edit-bookmark-category" name="edit-bookmark-category" style="width: 90%;"></select>
 
             <label for="edit-bookmark-tags">Tags:</label>
-            <input type="text" id="edit-bookmark-tags" name="edit-bookmark-tags" placeholder="Enter tags separated by semicolon" />
+            <input type="text" id="edit-bookmark-tags" name="edit-bookmark-tags" placeholder="Enter tags separated by semicolon" style="width: 90%;" />
+
+            <input type="text" id="edit-bookmark-author" name="edit-bookmark-author" hidden />
 
             <button type="submit">Save Changes</button>
         </form>
