Remove unecessary files

--- a/popup.html
+++ b/popup.html
@@ -11,10 +11,10 @@
 <body>
     <!-- Main Menu -->
     <div id="main">
-        <h1>Bookmark Manager</h1>
+        <h2>X-mark Manager</h2>
         <button id="browse-categories-btn" class="menu-btn">Browse Categories</button>
         <button id="add-category-btn" class="menu-btn">Add Category</button>
-        <button id="search-btn" class="menu-btn">Search Bookmarks</button>
+        <button id="search-btn" class="menu-btn">Search Posts</button>
     </div>
     <!-- Browse Categories Section -->
     <div id="browse-categories" class="hidden">
