fix search, edit features

--- a/popup.html
+++ b/popup.html
@@ -48,6 +48,7 @@
 
             
             <input type="hidden" id="edit-bookmark-url" name="edit-bookmark-url" style="width: 90%; padding: 0.5rem; border-radius: 5px; border: 1px solid #ccc;" />
+            <input type="hidden" id="edit-bookmark-id" name="edit-bookmark-id" />
 
 
             <div style="display: flex; flex-direction: column;">
