Add about and paypal link

--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,11 @@
         <button id="browse-categories-btn" class="menu-btn">Browse Categories</button>
         <button id="add-category-btn" class="menu-btn">Add Category</button>
         <button id="search-btn" class="menu-btn">Search Posts</button>
+        <!-- Payment Links -->
+        <div class="links">
+            <a href="https://xmarkbe.onrender.com/" target="_blank" class="link">About X-mark</a>
+            <a href="https://www.paypal.com/ncp/payment/RVE3NL84WXSJW" target="_blank" class="link">Donate $2</a>
+        </div>
     </div>
     <!-- Browse Categories Section -->
     <div id="browse-categories" class="hidden">
